--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publicar en npm
 
 on:
   push:
-    branches: [ master ]    # o 'master', según tu rama principal
+    branches: [ npm ]    # o 'master', según tu rama principal
   release:
     types: [ created ]      # también se puede disparar al crear un release
 
